--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <h1>Wunderlust Travel</h1>
-            (logo.png)
+            <img src="images/logo.png" alt="logo sunset with two palm trees and a wave on the horizon">
             <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
 
             - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
@@ -28,9 +28,9 @@
                 <h1>Majorca</h1>
                 <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
 
-                majorca-waves.png
-                majorca-beach.png
-                majorca-cove.png
+                <img src="images/majorca-waves.png" alt="beautiful blue ocean waves next to a cliffside">
+                <img src="images/majorca-beach.png" alt="beautiful beach with cliffs on each side">
+                <img src="images/majorca-cove.png" alt="cove with crystal clear water with a bright blue sky">
 
                 <h2>Plan Your Trip</h2>
                 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
@@ -40,7 +40,7 @@
                 <path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z" />
                 </svg>
 
-                (href=”#”) (title=”Search for flights”)
+                <a href=”#”>Search for flights</a>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <polyline points="9 6 15 12 9 18" />
@@ -55,7 +55,7 @@
                 <circle cx="7" cy="10" r="1" />
                 </svg>
 
-                (href=”#”) (title=”Search for Hotels”)
+                <a href=”#”>Search for Hotels</a>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <polyline points="9 6 15 12 9 18" />
@@ -72,7 +72,7 @@
                 <line x1="8" y1="7" x2="6" y2="12" />
                 </svg>
 
-                (href=”#”) (title=”Search for Activities”)
+                <a href=”#”>Search for Activities</a>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <polyline points="9 6 15 12 9 18" />
@@ -86,7 +86,7 @@
                 <path d="M19 3v12h-5c-.023 -3.681 .184 -7.406 5 -12zm0 12v6h-1v-3m-10 -14v17m-3 -17v3a3 3 0 1 0 6 0v-3" />
                 </svg>
 
-                (href=”#”) (title=”Search for Restaurants”) 
+                <a href=”#”>Search for Restaurants</a>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <polyline points="9 6 15 12 9 18" />
@@ -97,26 +97,27 @@
             <section>
                 <h1>Testimonials</h1>
                 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-                Miranda Blake
-                miranda-blake.png
-                Traveling From: London, England
-                “I traveled here for business, but my stay was extended. Now it is my home.”
+                
+                <h2>Miranda Blake</h2>
+                <img src="images/miranda-blake.png" alt="woman with blonde hair and sunglasses">
+                <h3>Traveling From: London, England</h3>
+                <blockquote>“I traveled here for business, but my stay was extended. Now it is my home.”</blockquote>
                 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-                Max Winter
-                max-winter.png
-                Traveling From: Berlin, Germany
-                “Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ”
+                <h2>Max Winter</h2>
+                <img src="images/max-winter.png" alt="man with salt and pepper stubble">
+                <h3>Traveling From: Berlin, Germany</h3>
+                <blockquote>“Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ”</blockquote>
                 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-                Inés Villegoes
-                ines-villegoes.png
-                Traveling From: Barcelona, Spain
-                “A very safe environment for all travelers.”
+                <h2>Inés Villegoes</h2>
+                <img src="images/ines-villegoes.png" alt="woman with long brown hair and a bulletproof vest">
+                <h3>Traveling From: Barcelona, Spain</h3>
+                <blockquote>“A very safe environment for all travelers.”</blockquote>
 
                 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-                Carmen Lorenzo
-                carmen-lorenzo.png
-                Traveling From: Madrid, Spain
-                “Live, laugh, love-- everything you need in Majorca.”
+                <h2>Carmen Lorenzo</h2>
+                <img src="images/carmen-lorenzo.png" alt="young womman with brown hair and hoop earings">
+                <h3>Traveling From: Madrid, Spain</h3>
+                <blockquote>“Live, laugh, love-- everything you need in Majorca.”</blockquote>
                 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
             </section>
             <section>
@@ -132,7 +133,7 @@
                 <path d="M7 16l-1.5 -1.5" />
                 </svg>
 
-                Size: 1,405 miles squared
+                <p>Size: 1,405 miles squared</p>
                 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
                 <h2>Elevation</h2>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-top-bar" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -142,7 +143,7 @@
                 <line x1="9" y1="21" x2="15" y2="21" />
                 </svg>
 
-                Elevation: 4,741 feet
+                <p>Elevation: 4,741 feet</p>
                 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
                 <h2>Location</h2>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -150,7 +151,7 @@
                 <circle cx="12" cy="11" r="3" />
                 <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
                 </svg>
-                Location: Mediterranean 
+                <p>Location: Mediterranean</p>
                 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
                 <h2>Population</h2>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -161,7 +162,7 @@
                 <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
                 </svg>
 
-                Population: 923,608
+                <p>Population: 923,608</p>
             </section>
             - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 
