--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                 <h1>Contact Us</h1>
                 <form>
                     <label for="first">First Name</label>
-                    <input type="text" name="first" id="first" placeholder="(Enter first name)" required>
+                    <input type="text" name="first" id="first" placeholder="Enter first name" required>
                     <label for="last">Last Name</label>
-                    <input type="text" name="last" id="last" placeholder="(Enter last name)" required>
+                    <input type="text" name="last" id="last" placeholder="Enter last name" required>
                     <fieldset>
                         <legend>Contact Method</legend> 
                         <label for="email">Email</label>
@@ -184,7 +184,7 @@
                     <label for="Eaddress">Email Address</label>
                     <input type="email" id="Eaddress" name="Eaddress" placeholder="Enter Email" required>
                     <label for="number">Phone Number</label>
-                    <input type="tel" id="number" name="number" placeholder="(Enter telephone number)" required>
+                    <input type="tel" id="number" name="number" placeholder="Enter telephone number" required>
 
                     <label for="destination">Destination</label>
                     <select name="destination" id="destination" required>
