--- a/majorca.html
+++ b/majorca.html
@@ -2,6 +2,24 @@
 <html lang="en">
     <head>
 <!--         Add all required tags in the head here - meta tags for SEO, responsiveness, and with info about the page, etc., in addition to tags to create a card on Twitter with a large image and open graph tags to allow for sharing on other social media sites -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Jonathan Alvarez">
+    <meta description="Plan your next trip to the beautiful Majorca! Experience the turquoise blue waters, secret coves, soft golden sands, and vibrant capital of this sought-after vacation destination!"> 
+    <title>Wunderlust - Majorca</title>
+
+    <meta property="og:title" content="Majorca">
+    <meta property="og:url" content="https://www.public.asu.edu/~jlbarn11/teaching/jQueryAPI/">
+    <meta property="og:type" content="video.movie">
+    <meta property="og:image" content="https://image.tmdb.org/t/p/w400//t6HIqrRAclMCA60NsSmeqe9RmNV.jpg">
+
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@movieinfo">
+    <meta name="twitter:creator" content="creator name">
+    <meta name="twitter:title" content="Current Popular Movies">
+    <meta name="twitter:description" content="Learn more about your favorite current movies.">
+    <meta name="twitter:image" content="https://image.tmdb.org/t/p/w400//t6HIqrRAclMCA60NsSmeqe9RmNV.jpg">
     </head>
     <body>
 <!--         Reveiew the document and add the proper tags to all of the headings  throughout. Use the outline feature in the validator to ensure that these have been added correctly. See the image of the correct outline as a reference if you have questions 
