--- a/majorca.html
+++ b/majorca.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jonathan Alvarez">
-    <meta description="Plan your next trip to the beautiful Majorca! Experience the turquoise blue waters, secret coves, soft golden sands, and vibrant capital of this sought-after vacation destination!"> 
+    <meta name="description" content="Plan your next trip to the beautiful Majorca! Experience the turquoise blue waters, secret coves, soft golden sands, and vibrant capital of this sought-after vacation destination!"> 
     <title>Wunderlust - Majorca</title>
 
     <meta property="og:title" content="Majorca">
@@ -87,7 +87,7 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                     </section>
                     <section>
                         <img src="images/max-winter.png" alt="Max Winter with a brown shirt and salt and pepper stubble">
-                        <h4>Max Winter<h4>
+                        <h4>Max Winter</h4>
                         <p>Traveling From: Berlin, Germany</p>
                         <q>Great escape from my reality. Beautiful sunsets, wonderful people, great beer.</q>
                     </section>
